# PolyPredict_Labs

./: ADMIN_GUIDE.md  DEPLOYMENT.md  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  test_keys.js  verify_keys.js
polybet-relayer/: ENVIRONMENT.md  idl.json  package.json  vercel.json
polybet-relayer/api/: resolve-markets.ts
polybet-relayer/utils/: polymarket.ts
prophet-relayer/: ENVIRONMENT.md  idl.json  package.json  tsconfig.json
prophet-relayer/utils/: solana.ts
public/: manifest.json
scripts/: initialize-mainnet.ts
solana-contracts/: Anchor.toml
solana-contracts/programs/polybet/: Cargo.toml
solana-contracts/programs/polybet/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ActivityTicker.tsx  Background.tsx  CreateMarketModal.tsx  FAQ.tsx  FeaturedMarket.tsx  Hero.tsx  HowItWorks.tsx  HowToBuy.tsx  InstallPrompt.tsx  LaunchCountdown.tsx  MarketWarRoom.tsx  MobileNav.tsx  NavCategories.tsx  PolybetLogo.tsx  PredictionCard.tsx  Providers.tsx  ResolutionPanel.tsx  Roadmap.tsx  Skeleton.tsx  Sparkline.tsx  Stats.tsx  TeamLogo.tsx  Tokenomics.tsx  TraderDashboard.tsx  TrustBadges.tsx  UserPositions.tsx  WalletConnect.tsx
src/context/: BetSuccessContext.tsx  ToastContext.tsx
src/data/: real_snapshot.ts  synthetic.ts
src/hooks/: useHaptic.ts
src/idl/: polybet.json  prophet.json
src/idls/: polybet.json  prophet.json
src/program/: Cargo.toml
src/scripts/: check-polymarket.js  test-connection.js  test-goldsky.js  test-proxy.js
src/services/: coingecko.ts  polymarket.ts  pyth.ts  (+1 more)
(+14 files in other folders)
