[package]
name = "polybet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "polybet"

[features]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
solana-program = "1.18"
spl-token-2022 = "0.9"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = "z"

[profile.release.build-override]
opt-level = "z"
incremental = false
codegen-units = 1

# Force dependency optimization to clear stack errors
[profile.dev.package."*"]
opt-level = 3
[profile.release.package."*"]
opt-level = 3
